[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!
members = [
    "board_plugin"
]

[package]
name = "bevy-td"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy =  { version = "0.8.0", features = ["dynamic"] }
board_plugin = { path = "board_plugin" }
bevy-inspector-egui = { version = "0.13.0", optional = true }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
default = []
debug = ["board_plugin/debug", "bevy-inspector-egui"]

# Hierarchy inspector debug
