[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!
members = [
    "board_plugin",
    "tower_defense_plugin",
    "start_menu_plugin"
]

[package]
name = "bevy-td"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
board_plugin = { path = "board_plugin" }
tower_defense_plugin = { path = "tower_defense_plugin" }
start_menu_plugin = { path = "start_menu_plugin" }
bevy-inspector-egui = { version = "0.13.0", optional = true }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
default = []
debug = ["board_plugin/debug", "bevy-inspector-egui"]

# Hierarchy inspector debug

 # Engine
 [dependencies.bevy]
version = "0.8.0"
 default-features = false
 features = ["render", "bevy_winit", "png"]
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
 version = "0.8.0"
default-features = false
features = ["x11","dynamic"]
# Dependencies for WASM only
[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version="0.2"
 features=["js"]

 